--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "tunnel": "cloudflared tunnel --url http://localhost:3000"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "mongodb": "^6.3.0",
     "telebot": "^1.4.1",
     "telebot-vercel": "^1.0.1"
